compiler/acton/test/syntaxerrors/err36.act
# Invalid match/case syntax
def matcher(x):
    match x:
        case 1
            return "one"